--- a/wp-content/themes/fipradotcom/style.css
+++ b/wp-content/themes/fipradotcom/style.css
@@ -1476,19 +1476,26 @@ a {
 
 .icon-circle {
   display: inline-block;
-  padding: 0.75rem;
-  margin-bottom: 1.5rem;
+  margin-bottom: 0.75rem;
   line-height: 55px;
-  width: 80px;
-  height: 80px;
+  width: 55px;
+  height: 55px;
   border-bottom-left-radius: 50%;
   border-top-left-radius: 50%;
   border-bottom-right-radius: 50%;
   border-top-right-radius: 50%;
   background-color: white;
   color: #5F697F;
-  font-size: 48px;
-  font-size: 3rem; }
+  font-size: 34px;
+  font-size: 2.125rem; }
+  @media screen and (min-width: 769px) {
+    .icon-circle {
+      width: 80px;
+      height: 80px;
+      font-size: 48px;
+      font-size: 3rem;
+      line-height: 80px;
+      margin-bottom: 1.5rem; } }
 
 .outline .icon-circle {
   background-color: #5F697F;
