--- a/wp-content/themes/fipradotcom/sass/typography/_headings.scss
+++ b/wp-content/themes/fipradotcom/sass/typography/_headings.scss
@@ -3,39 +3,29 @@ h1, h2, h3, h4, h5, h6 {
   font-family:$font__sans;
   margin:0;
 
-  &.blue {
-    color:$color__fipra-blue;
-  }
-  &.grey {
-    color:$color__fipra-blue-gray;
-  }
-  &.turquoise {
-    color:$color__fipra-turquoise;
-  }
-  &.violet {
-    color:$color__fipra-violet;
-  }
-  &.center {
-    text-align: center;
-  }
+  &.blue { color:$color__fipra-blue; }
+  &.grey { color:$color__fipra-blue-gray; }
+  &.turquoise { color:$color__fipra-turquoise; }
+  &.violet { color:$color__fipra-violet; }
+  &.center { text-align: center; }
 }
 
-h1, h2 {
-  margin:0 0 $v-rhythm * 2 0;
-}
-
-h3, h4, h5, h6 {
-  margin:0 0 $v-rhythm 0;
-}
+h1, h2 { margin:0 0 $v-rhythm * 2 0; }
+h3, h4, h5, h6 { margin:0 0 $v-rhythm 0; }
 
 h1 {
   font-weight: $font__bold;
-  @include font-size(28);
+  @include font-size(22);
   line-height: $v-rhythm * 2.5;
 
-  @include media($media__medium) {
-    @include font-size(36);
-    line-height: $v-rhythm * 3;
+  @include media($media__medium) { @include font-size(36); line-height: $v-rhythm * 3; }
+
+//  Style similar to H5 in .hero-banner and feature blocks
+  &.feature {
+    margin:0;
+    @include font-size(16);
+    font-weight: $font__black;
+    text-transform: uppercase;
   }
 }
 
@@ -45,10 +35,13 @@ h2 {
   @include font-size(24);
   line-height: $v-rhythm * 2.5;
 
-  @include media($media__medium) {
-    font-weight: $font__light;
-    @include font-size(32);
-    line-height: $v-rhythm * 3;
+  @include media($media__medium) { font-weight: $font__light; @include font-size(32); line-height: $v-rhythm * 3; }
+
+  //  Style similar to H1 in .hero-banner and feature blocks
+  &.feature {
+    @include media($media__small) { @include font-size(28); line-height: $v-rhythm * 3; }
+    @include media($media__medium) { font-weight: $font__light; @include font-size(38); line-height: $v-rhythm * 4; }
+    @include media($media__large) { font-weight: $font__light; @include font-size(50); line-height: $v-rhythm * 5; }
   }
 }
 
@@ -57,10 +50,7 @@ h3 {
   @include font-size(21);
   line-height: $v-rhythm * 2;
 
-  @include media($media__medium) {
-    @include font-size(24);
-    line-height: $v-rhythm * 2;
-  }
+  @include media($media__medium) { @include font-size(24); line-height: $v-rhythm * 2; }
 }
 
 h4 {
@@ -68,19 +58,12 @@ h4 {
   @include font-size(18);
   line-height: $v-rhythm * 2;
 
-  @include media($media__medium) {
-    @include font-size(21);
-    line-height: $v-rhythm * 2;
-  }
+  @include media($media__medium) { @include font-size(21); line-height: $v-rhythm * 2; }
 }
 
-h5 {
-  @include font-size(16);
-  font-weight: $font__black;
-  text-transform: uppercase;
-}
+h5 { @include font-size(16); font-weight: $font__black; text-transform: uppercase; }
 
-h6 {
-  @include font-size(14);
-  font-weight: $font__bold;
-}
+h6 { @include font-size(14); font-weight: $font__bold; }
+
+
+//  In hero-banner, h1 looks the same as H5, H2 is same as H1 but light font weight
