--- a/wp-content/themes/fipradotcom/sass/variables-site/_colors.scss
+++ b/wp-content/themes/fipradotcom/sass/variables-site/_colors.scss
@@ -27,3 +27,8 @@ $color__border-button-hover: #ccc #bbb #aaa;
 $color__border-button-focus: #aaa #bbb #bbb;
 $color__border-input: #ccc;
 $color__border-abbr: #666;
+
+$color_soft-black: #222;
+$color_black: #000;
+$color_soft-white: darken(white, 5%);
+$color_white: #fff;
