--- a/wp-content/themes/fipradotcom/sass/variables-site/_structure.scss
+++ b/wp-content/themes/fipradotcom/sass/variables-site/_structure.scss
@@ -4,6 +4,7 @@ $size__site-sidebar: 25%;
 $container__outer-width:1100px;
 $container__content-width:1020px;
 
+$media__xxlarge: 1500px;
 $media__xlarge: 1200px;
 $media__large: 940px;
 $media__medium: 769px;
