--- a/wp-content/themes/fipradotcom/sass/layout/_footer.scss
+++ b/wp-content/themes/fipradotcom/sass/layout/_footer.scss
@@ -1,7 +1,7 @@
 #footer-global-network-container {
   clear:both;
   background-color: darken($color__fipra-light-gray, 15%);
-  @include background(linear-gradient(darken($color__fipra-light-gray, 15%) 40%, darken($color__fipra-light-gray, 25%) 100%));
+  @include background(linear-gradient(darken($color__fipra-light-gray, 10%) 40%, darken($color__fipra-light-gray, 15%) 100%));
   border-top:1px solid darken($color__fipra-light-gray, 25%);
   border-bottom:1px solid darken($color__fipra-light-gray, 25%);
 
@@ -30,7 +30,9 @@
       padding:$v-rhythm / 2 em(10px);
       width:80%;
       border:0;
-      @include background(linear-gradient(darken($color__fipra-light-gray, 8%) 0%, $color__fipra-light-gray 20%));
+      background-color: $color__fipra-light-gray;
+      @include background(linear-gradient(darken($color__fipra-light-gray, 5%) 0%, lighten($color__fipra-light-gray, 5%) 20%));
+      border-top:1px solid darken($color__fipra-light-gray, 15%);
       border-bottom:1px solid white;
       background-color: $color__fipra-light-gray;
       @include border-left-radius(4px);
@@ -49,7 +51,7 @@
   font-family:$font__sans;
   color:lighten($color__fipra-blue-gray, 45%);
   background-color: lighten($color__fipra-blue-gray, 10%);
-  @include background(linear-gradient(lighten($color__fipra-blue-gray, 5%) 0%, darken($color__fipra-blue-gray, 5%) 100%));
+  @include background(linear-gradient(lighten($color__fipra-blue-gray, 5%) 0%, $color__fipra-blue-gray 100%));
 
   h5 { color:lighten($color__fipra-blue-gray, 30%); }
   a {
@@ -111,7 +113,7 @@
     padding:$v-rhythm 40px $v-rhythm * 2;
     @include outer-container($container__outer-width);
     @include media($media__xlarge) {
-      padding:$v-rhythm 0;
+      padding:$v-rhythm 0 $v-rhythm * 2;
     }
 
     .footer-copyright, .footer-social-links {
