--- a/wp-content/themes/fipradotcom/sass/layout/_hero-banner.scss
+++ b/wp-content/themes/fipradotcom/sass/layout/_hero-banner.scss
@@ -1,3 +1,51 @@
+.hero-banner-gradient {
+
+  &.dark-image {
+    &.gradient-left, &.gradient-right, &.gradient-center { background-image: linear-gradient(rgba(black, 0.3) 0%, rgba(black, 0.3) 100%); }
+    background-position: 0 0;
+    background-repeat: no-repeat;
+    background-size:contain;
+
+    @include media($media__large) {
+      &.gradient-left { background-image: linear-gradient(rgba(black, 0) 0px, rgba(40, 40, 40, 0) 550px, rgba($color__fipra-light-gray, 1) 800px), linear-gradient(to left, rgba(black, 0) 20%, rgba(black, 0.6) 100%); }
+      &.gradient-right { background-image: linear-gradient(rgba(black, 0) 0px, rgba(40, 40, 40, 0) 550px, rgba($color__fipra-light-gray, 1) 800px), linear-gradient(to right, rgba(black, 0) 20%, rgba(black, 0.6) 100%); }
+      &.gradient-center { background-image: linear-gradient(rgba(black, 0) 0px, rgba(40, 40, 40, 0) 550px, rgba($color__fipra-light-gray, 1) 800px), linear-gradient(rgba(black, 0.3) 0%, rgba(black, 0.3) 100%); }
+      background-position: 0 0, 0 0;
+      background-repeat: no-repeat, no-repeat;
+      background-size:contain, contain;
+    }
+
+    @include media($media__xxlarge) {
+      &.gradient-left { background-image: linear-gradient(rgba(black, 0) 0px, rgba(40, 40, 40, 0) 600px, rgba($color__fipra-light-gray, 1) 1000px), linear-gradient(to left, rgba(black, 0) 0%, rgba(black, 0.5) 100%); }
+      &.gradient-right { background-image: linear-gradient(rgba(black, 0) 0px, rgba(40, 40, 40, 0) 600px, rgba($color__fipra-light-gray, 1) 1000px), linear-gradient(to right, rgba(black, 0) 0%, rgba(black, 0.5) 100%); }
+      &.gradient-center { background-image: linear-gradient(rgba(black, 0) 0px, rgba(40, 40, 40, 0) 600px, rgba($color__fipra-light-gray, 1) 1000px), linear-gradient(rgba(black, 0.3) 0%, rgba(black, 0.3) 100%); }
+    }
+  }
+
+  &.light-image {
+    &.gradient-left, &.gradient-right, &.gradient-center { background-image: linear-gradient(rgba(white, 0.3) 0%, rgba(white, 0.3) 100%); }
+    background-position: 0 0;
+    background-repeat: no-repeat;
+    background-size:contain;
+
+    @include media($media__large) {
+      &.gradient-left { background-image: linear-gradient(rgba(white, 0) 0px, rgba(white, 0) 550px, rgba($color__fipra-light-gray, 1) 800px), linear-gradient(to left, rgba(white, 0) 20%, rgba(white, 0.6) 100%); }
+      &.gradient-right { background-image: linear-gradient(rgba(white, 0) 0px, rgba(white, 0) 550px, rgba($color__fipra-light-gray, 1) 800px), linear-gradient(to right, rgba(white, 0) 20%, rgba(white, 0.6) 100%); }
+      &.gradient-center { background-image: linear-gradient(rgba(white, 0) 0px, rgba(white, 0) 550px, rgba($color__fipra-light-gray, 1) 800px), linear-gradient(rgba(white, 0.3) 0%, rgba(white, 0.3) 100%); }
+      background-position: 0 0, 0 0;
+      background-repeat: no-repeat, no-repeat;
+      background-size:contain, contain;
+    }
+
+    @include media($media__xxlarge) {
+      &.gradient-left { background-image: linear-gradient(rgba(white, 0) 0px, rgba(white, 0) 600px, rgba($color__fipra-light-gray, 1) 1000px), linear-gradient(to left, rgba(white, 0) 0%, rgba(white, 0.5) 100%); }
+      &.gradient-right { background-image: linear-gradient(rgba(white, 0) 0px, rgba(white, 0) 600px, rgba($color__fipra-light-gray, 1) 1000px), linear-gradient(to right, rgba(white, 0) 0%, rgba(white, 0.5) 100%); }
+      &.gradient-center { background-image: linear-gradient(rgba(white, 0) 0px, rgba(white, 0) 600px, rgba($color__fipra-light-gray, 1) 1000px), linear-gradient(rgba(white, 0.3) 0%, rgba(white, 0.3) 100%); }
+    }
+  }
+}
+
+
 .hero-banner {
   @include clearfix;
   @include span-columns(12);
@@ -21,8 +69,8 @@
     margin:$v-rhythm 0;
   }
 
-  &.light {
-    h1, .lead {
+  &.light-text {
+    h1, h2, .lead {
       color:white;
       text-shadow:0px 1px 1px black;
     }
@@ -37,11 +85,12 @@
     }
   }
 
-  &.dark {
-    h1 {
-      color:lighten(black, 5%);
+  &.dark-text {
+    h2 {
+      color:$color__fipra-blue;
     }
     h1, .lead {
+      color:$color_soft-black;
       text-shadow:0px 1px 1px $color__fipra-light-gray;
     }
     .btn.primary {
