--- a/wp-content/themes/fipradotcom/sass/modules/_modules.scss
+++ b/wp-content/themes/fipradotcom/sass/modules/_modules.scss
@@ -30,6 +30,7 @@
   }
   &.secondary {
     background-color: darken($color__fipra-light-gray, 10%);
+    @include background(linear-gradient(darken($color__fipra-light-gray, 5%) 0%, $color__fipra-light-gray 70%));
     padding:$v-rhythm em(16px);
     color:$color__fipra-blue-gray;
     a {
@@ -42,7 +43,7 @@
   }
 }
 
-.icon-circle {
+.circle-icon {
   display:inline-block;
   margin-bottom:$v-rhythm;
   line-height:55px;
@@ -51,10 +52,25 @@
   @include border-left-radius(50%);
   @include border-right-radius(50%);
   background-color: white;
+  @include background(radial-gradient(to bottom, white 60%, darken(white, 15%) 80%));
+  box-shadow: 0 4px 6px rgba(black, 0.3);
+  text-shadow: 0px 2px 0px white;
   color:$color__fipra-blue-gray;
   @include font-size(34);
+  &.blue {
+    color: white;
+    background-color: $color__fipra-blue;
+    @include background(radial-gradient(to bottom, $color__fipra-blue 60%, darken($color__fipra-blue, 15%) 80%));
+    text-shadow: 0px -1px 0px darken($color__fipra-blue, 10%);
+  }
+  &.orange {
+    color: white;
+    background-color: orange;
+    @include background(radial-gradient(to bottom, orange 60%, darken(orange, 10%) 80%));
+    text-shadow: 0px -1px 0px darken(orange, 10%);
+  }
 
-  @include media($media__medium) {
+  @include media($media__small) {
     width:80px;
     height:80px;
     @include font-size(48);
@@ -63,7 +79,7 @@
   }
 }
 //Gallery box with outline style
-.outline .icon-circle {
+.outline .circle-icon {
   background-color: $color__fipra-blue-gray;
   color:white;
 }
