--- a/wp-content/themes/fipradotcom/style.css
+++ b/wp-content/themes/fipradotcom/style.css
@@ -887,27 +887,28 @@ table {
     clear: both;
     content: "";
     display: table; }
+  .gallery .gallery-block h3, .gallery .gallery-block h4 {
+    color: #00257f;
+    font-weight: 900; }
   .gallery .gallery-block .featured-image img {
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
     width: 100%; }
   .gallery .gallery-block.center {
     text-align: center; }
-  .gallery .gallery-block .gallery-block-content {
-    padding: 1.5rem 1.5em; }
-    @media screen and (min-width: 940px) {
-      .gallery .gallery-block .gallery-block-content {
-        min-height: 18.75em; } }
   .gallery .gallery-block.bg {
-    background: #EBEAE8; }
+    background: #EBEAE8;
+    background: -webkit-linear-gradient(#EBEAE8 0%, #f7f6f6 70%);
+    background: -webkit-linear-gradient(to, #f7f6f6 70%);
+    background: linear-gradient(to   , #f7f6f6 70%); }
     .gallery .gallery-block.bg.orange {
       background: -webkit-linear-gradient(bottom, #ffac14 0, #eb9800 100%);
       background: linear-gradient(to top, #ffac14 0, #eb9800 100%);
       color: white; }
-      .gallery .gallery-block.bg.orange .icon-circle {
+      .gallery .gallery-block.bg.orange .circle-icon {
         color: orange; }
       .gallery .gallery-block.bg.orange .highlight-box {
-        background-color: #cc8400;
+        background: #cc8400;
         border-top: 1px solid #c27d00;
         color: white; }
         .gallery .gallery-block.bg.orange .highlight-box a {
@@ -918,10 +919,10 @@ table {
       background: -webkit-linear-gradient(bottom, #7f6ee8 0, #5f4ae2 100%);
       background: linear-gradient(to top, #7f6ee8 0, #5f4ae2 100%);
       color: white; }
-      .gallery .gallery-block.bg.violet .icon-circle {
+      .gallery .gallery-block.bg.violet .circle-icon {
         color: #6f5ce5; }
       .gallery .gallery-block.bg.violet .highlight-box {
-        background-color: #4830de;
+        background: #4830de;
         border-top: 1px solid #4027dd;
         color: white; }
         .gallery .gallery-block.bg.violet .highlight-box a {
@@ -932,36 +933,75 @@ table {
       background: -webkit-linear-gradient(bottom, #16c1df 0, #12a1b9 100%);
       background: linear-gradient(to top, #16c1df 0, #12a1b9 100%);
       color: white; }
-      .gallery .gallery-block.bg.turquoise .icon-circle {
+      .gallery .gallery-block.bg.turquoise .circle-icon {
         color: #14b1cc; }
       .gallery .gallery-block.bg.turquoise .highlight-box {
-        background-color: #0f899e;
+        background: #0f899e;
         border-top: 1px solid #0f8194;
         color: white; }
         .gallery .gallery-block.bg.turquoise .highlight-box a {
           color: white; }
           .gallery .gallery-block.bg.turquoise .highlight-box a:hover {
             color: #29ceea; }
+    .gallery .gallery-block.bg.orange h3, .gallery .gallery-block.bg.orange h4, .gallery .gallery-block.bg.violet h3, .gallery .gallery-block.bg.violet h4, .gallery .gallery-block.bg.turquoise h3, .gallery .gallery-block.bg.turquoise h4 {
+      color: white; }
   .gallery .gallery-block.outline {
     border: 1px solid #EBEAE8; }
     .gallery .gallery-block.outline .highlight-box {
       background-color: #EBEAE8;
       border-top: 1px solid #e4e3e0;
       color: #5F697F; }
-.gallery.row-of-three {
-  margin-bottom: 2.25rem; }
+@media screen and (min-width: 940px) {
+  .gallery.row-of-two .gallery-block {
+    float: left;
+    display: block;
+    margin-right: 2.35765%;
+    width: 48.82117%; }
+    .gallery.row-of-two .gallery-block:last-child {
+      margin-right: 0; }
+    .gallery.row-of-two .gallery-block:nth-child(2n) {
+      margin-right: 0; }
+    .gallery.row-of-two .gallery-block:nth-child(2n+1) {
+      clear: left; } }
+.gallery.row-of-two .gallery-block .gallery-block-content {
+  display: block; }
+  .gallery.row-of-two .gallery-block .gallery-block-content::after {
+    clear: both;
+    content: "";
+    display: table; }
   @media screen and (min-width: 940px) {
-    .gallery.row-of-three .gallery-block {
-      float: left;
-      display: block;
-      margin-right: 2.35765%;
-      width: 31.76157%; }
-      .gallery.row-of-three .gallery-block:last-child {
-        margin-right: 0; }
-      .gallery.row-of-three .gallery-block:nth-child(3n) {
-        margin-right: 0; }
-      .gallery.row-of-three .gallery-block:nth-child(3n+1) {
-        clear: left; } }
+    .gallery.row-of-two .gallery-block .gallery-block-content {
+      min-height: 18.75em; } }
+@media screen and (min-width: 940px) {
+  .gallery.row-of-three .gallery-block {
+    float: left;
+    display: block;
+    margin-right: 2.35765%;
+    width: 31.76157%; }
+    .gallery.row-of-three .gallery-block:last-child {
+      margin-right: 0; }
+    .gallery.row-of-three .gallery-block:nth-child(3n) {
+      margin-right: 0; }
+    .gallery.row-of-three .gallery-block:nth-child(3n+1) {
+      clear: left; } }
+@media screen and (min-width: 940px) {
+  .gallery.row-of-three .gallery-block .gallery-block-content {
+    min-height: 18.75em; } }
+.gallery.row-of-two, .gallery.row-of-three {
+  margin-bottom: 2.25rem; }
+  .gallery.row-of-two .gallery-block.full-width, .gallery.row-of-three .gallery-block.full-width {
+    float: left;
+    display: block;
+    margin-right: 2.35765%;
+    width: 100%; }
+    .gallery.row-of-two .gallery-block.full-width:last-child, .gallery.row-of-three .gallery-block.full-width:last-child {
+      margin-right: 0; }
+    .gallery.row-of-two .gallery-block.full-width:nth-child(1n), .gallery.row-of-three .gallery-block.full-width:nth-child(1n) {
+      margin-right: 0; }
+    .gallery.row-of-two .gallery-block.full-width:nth-child(1n+1), .gallery.row-of-three .gallery-block.full-width:nth-child(1n+1) {
+      clear: left; }
+  .gallery.row-of-two .gallery-block-content, .gallery.row-of-three .gallery-block-content {
+    padding: 1.5rem 1.5em; }
 .gallery.list {
   display: block;
   text-align: center;
@@ -1537,6 +1577,9 @@ a {
       color: #14b1cc; }
 .highlight-box.secondary {
   background-color: #d3d1cd;
+  background: -webkit-linear-gradient(#dfdeda 0%, #EBEAE8 70%);
+  background: -webkit-linear-gradient(to, #EBEAE8 70%);
+  background: linear-gradient(to   , #EBEAE8 70%);
   padding: 0.75rem 1em;
   color: #5F697F; }
   .highlight-box.secondary a {
@@ -1545,7 +1588,7 @@ a {
     .highlight-box.secondary a:hover {
       color: #14b1cc; }
 
-.icon-circle {
+.circle-icon {
   display: inline-block;
   margin-bottom: 0.75rem;
   line-height: 55px;
@@ -1556,11 +1599,30 @@ a {
   border-bottom-right-radius: 50%;
   border-top-right-radius: 50%;
   background-color: white;
+  background: -webkit-radial-gradient(to bottom, white 60%, #d9d9d9 80%);
+  background: -webkit-radial-gradient(top, white 60%, #d9d9d9 80%);
+  background: radial-gradient(to bottom, white 60%, #d9d9d9 80%);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+  text-shadow: 0px 2px 0px white;
   color: #5F697F;
   font-size: 34px;
   font-size: 2.125rem; }
-  @media screen and (min-width: 769px) {
-    .icon-circle {
+  .circle-icon.blue {
+    color: white;
+    background-color: #00257f;
+    background: -webkit-radial-gradient(to bottom, #00257f 60%, #000f33 80%);
+    background: -webkit-radial-gradient(top, #00257f 60%, #000f33 80%);
+    background: radial-gradient(to bottom, #00257f 60%, #000f33 80%);
+    text-shadow: 0px -1px 0px #00164c; }
+  .circle-icon.orange {
+    color: white;
+    background-color: orange;
+    background: -webkit-radial-gradient(to bottom, orange 60%, #cc8400 80%);
+    background: -webkit-radial-gradient(top, orange 60%, #cc8400 80%);
+    background: radial-gradient(to bottom, orange 60%, #cc8400 80%);
+    text-shadow: 0px -1px 0px #cc8400; }
+  @media screen and (min-width: 481px) {
+    .circle-icon {
       width: 80px;
       height: 80px;
       font-size: 48px;
@@ -1568,7 +1630,7 @@ a {
       line-height: 80px;
       margin-bottom: 1.5rem; } }
 
-.outline .icon-circle {
+.outline .circle-icon {
   background-color: #5F697F;
   color: white; }
 
