Styling updates; added icons demo page

--- a/wp-content/themes/fipradotcom/sass/elements/_elements.scss
+++ b/wp-content/themes/fipradotcom/sass/elements/_elements.scss
@@ -26,6 +26,9 @@ hr {
 	border: 0;
 	height: 1px;
 	margin:$v-rhythm * 2 0;
+    &.medium { margin:$v-rhythm * 4 0; }
+    &.large { margin:$v-rhythm * 6 0; }
+    &.hidden { background-color:transparent;}
 }
 
 
