--- a/wp-content/themes/fipradotcom/style.css
+++ b/wp-content/themes/fipradotcom/style.css
@@ -395,6 +395,12 @@ hr {
   border: 0;
   height: 1px;
   margin: 1.5rem 0; }
+  hr.medium {
+    margin: 3rem 0; }
+  hr.large {
+    margin: 4.5rem 0; }
+  hr.hidden {
+    background-color: transparent; }
 
 img {
   height: auto;
@@ -881,8 +887,7 @@ table {
   border-top-left-radius: 4px;
   border-bottom-right-radius: 4px;
   border-top-right-radius: 4px;
-  margin-top: 1.5rem;
-  color: #5F697F; }
+  margin-top: 1.5rem; }
   .gallery .gallery-block::after {
     clear: both;
     content: "";
@@ -952,55 +957,91 @@ table {
       border-top: 1px solid #e4e3e0;
       color: #5F697F; }
 @media screen and (min-width: 940px) {
-  .gallery.row-of-two .gallery-block {
-    float: left;
-    display: block;
-    margin-right: 2.35765%;
-    width: 48.82117%; }
-    .gallery.row-of-two .gallery-block:last-child {
-      margin-right: 0; }
-    .gallery.row-of-two .gallery-block:nth-child(2n) {
-      margin-right: 0; }
-    .gallery.row-of-two .gallery-block:nth-child(2n+1) {
-      clear: left; } }
-.gallery.row-of-two .gallery-block .gallery-block-content {
-  display: block; }
-  .gallery.row-of-two .gallery-block .gallery-block-content::after {
-    clear: both;
-    content: "";
-    display: table; }
-  @media screen and (min-width: 940px) {
-    .gallery.row-of-two .gallery-block .gallery-block-content {
-      min-height: 18.75em; } }
-@media screen and (min-width: 940px) {
-  .gallery.row-of-three .gallery-block {
-    float: left;
-    display: block;
-    margin-right: 2.35765%;
-    width: 31.76157%; }
-    .gallery.row-of-three .gallery-block:last-child {
-      margin-right: 0; }
-    .gallery.row-of-three .gallery-block:nth-child(3n) {
-      margin-right: 0; }
-    .gallery.row-of-three .gallery-block:nth-child(3n+1) {
-      clear: left; } }
-@media screen and (min-width: 940px) {
-  .gallery.row-of-three .gallery-block .gallery-block-content {
-    min-height: 18.75em; } }
-.gallery.row-of-two, .gallery.row-of-three {
-  margin-bottom: 2.25rem; }
-  .gallery.row-of-two .gallery-block.full-width, .gallery.row-of-three .gallery-block.full-width {
+  .gallery .row-of-1 .gallery-block {
     float: left;
     display: block;
     margin-right: 2.35765%;
     width: 100%; }
-    .gallery.row-of-two .gallery-block.full-width:last-child, .gallery.row-of-three .gallery-block.full-width:last-child {
+    .gallery .row-of-1 .gallery-block:last-child {
       margin-right: 0; }
-    .gallery.row-of-two .gallery-block.full-width:nth-child(1n), .gallery.row-of-three .gallery-block.full-width:nth-child(1n) {
+    .gallery .row-of-1 .gallery-block:nth-child(1n) {
       margin-right: 0; }
-    .gallery.row-of-two .gallery-block.full-width:nth-child(1n+1), .gallery.row-of-three .gallery-block.full-width:nth-child(1n+1) {
+    .gallery .row-of-1 .gallery-block:nth-child(1n+1) {
+      clear: left; } }
+.gallery .row-of-1 .gallery-block .gallery-block-content {
+  display: block; }
+  .gallery .row-of-1 .gallery-block .gallery-block-content::after {
+    clear: both;
+    content: "";
+    display: table; }
+  @media screen and (min-width: 940px) {
+    .gallery .row-of-1 .gallery-block .gallery-block-content {
+      min-height: 18.75em; } }
+@media screen and (min-width: 940px) {
+  .gallery .row-of-2 .gallery-block {
+    float: left;
+    display: block;
+    margin-right: 2.35765%;
+    width: 48.82117%; }
+    .gallery .row-of-2 .gallery-block:last-child {
+      margin-right: 0; }
+    .gallery .row-of-2 .gallery-block:nth-child(2n) {
+      margin-right: 0; }
+    .gallery .row-of-2 .gallery-block:nth-child(2n+1) {
+      clear: left; } }
+.gallery .row-of-2 .gallery-block .gallery-block-content {
+  display: block; }
+  .gallery .row-of-2 .gallery-block .gallery-block-content::after {
+    clear: both;
+    content: "";
+    display: table; }
+  @media screen and (min-width: 940px) {
+    .gallery .row-of-2 .gallery-block .gallery-block-content {
+      min-height: 18.75em; } }
+@media screen and (min-width: 940px) {
+  .gallery .row-of-3 .gallery-block {
+    float: left;
+    display: block;
+    margin-right: 2.35765%;
+    width: 31.76157%; }
+    .gallery .row-of-3 .gallery-block:last-child {
+      margin-right: 0; }
+    .gallery .row-of-3 .gallery-block:nth-child(3n) {
+      margin-right: 0; }
+    .gallery .row-of-3 .gallery-block:nth-child(3n+1) {
+      clear: left; } }
+@media screen and (min-width: 940px) {
+  .gallery .row-of-3 .gallery-block .gallery-block-content {
+    min-height: 21.875em; } }
+@media screen and (min-width: 940px) {
+  .gallery .row-of-4 .gallery-block {
+    float: left;
+    display: block;
+    margin-right: 2.35765%;
+    width: 23.23176%; }
+    .gallery .row-of-4 .gallery-block:last-child {
+      margin-right: 0; }
+    .gallery .row-of-4 .gallery-block:nth-child(4n) {
+      margin-right: 0; }
+    .gallery .row-of-4 .gallery-block:nth-child(4n+1) {
+      clear: left; } }
+@media screen and (min-width: 940px) {
+  .gallery .row-of-4 .gallery-block .gallery-block-content {
+    min-height: 28.125em; } }
+.gallery .row-of-1, .gallery .row-of-2, .gallery .row-of-3, .gallery .row-of-4 {
+  margin-bottom: 2.25rem; }
+  .gallery .row-of-1 .gallery-block.full-width, .gallery .row-of-2 .gallery-block.full-width, .gallery .row-of-3 .gallery-block.full-width, .gallery .row-of-4 .gallery-block.full-width {
+    float: left;
+    display: block;
+    margin-right: 2.35765%;
+    width: 100%; }
+    .gallery .row-of-1 .gallery-block.full-width:last-child, .gallery .row-of-2 .gallery-block.full-width:last-child, .gallery .row-of-3 .gallery-block.full-width:last-child, .gallery .row-of-4 .gallery-block.full-width:last-child {
+      margin-right: 0; }
+    .gallery .row-of-1 .gallery-block.full-width:nth-child(1n), .gallery .row-of-2 .gallery-block.full-width:nth-child(1n), .gallery .row-of-3 .gallery-block.full-width:nth-child(1n), .gallery .row-of-4 .gallery-block.full-width:nth-child(1n) {
+      margin-right: 0; }
+    .gallery .row-of-1 .gallery-block.full-width:nth-child(1n+1), .gallery .row-of-2 .gallery-block.full-width:nth-child(1n+1), .gallery .row-of-3 .gallery-block.full-width:nth-child(1n+1), .gallery .row-of-4 .gallery-block.full-width:nth-child(1n+1) {
       clear: left; }
-  .gallery.row-of-two .gallery-block-content, .gallery.row-of-three .gallery-block-content {
+  .gallery .row-of-1 .gallery-block-content, .gallery .row-of-2 .gallery-block-content, .gallery .row-of-3 .gallery-block-content, .gallery .row-of-4 .gallery-block-content {
     padding: 1.5rem 1.5em; }
 .gallery.list {
   display: block;
@@ -1573,62 +1614,99 @@ a {
   .highlight-box.primary a {
     color: #16c5e3;
     font-weight: 900; }
-    .highlight-box.primary a:hover {
-      color: #14b1cc; }
 .highlight-box.secondary {
   background-color: #d3d1cd;
   background: -webkit-linear-gradient(#dfdeda 0%, #EBEAE8 70%);
   background: -webkit-linear-gradient(to, #EBEAE8 70%);
   background: linear-gradient(to   , #EBEAE8 70%);
   padding: 0.75rem 1em;
-  color: #5F697F; }
+  color: #222; }
   .highlight-box.secondary a {
-    color: #129db5;
+    color: #14b1cc;
     font-weight: 900; }
-    .highlight-box.secondary a:hover {
-      color: #14b1cc; }
 
-.circle-icon {
+.circle-icon, .square-icon {
   display: inline-block;
   margin-bottom: 0.75rem;
   line-height: 55px;
   width: 55px;
   height: 55px;
+  background-color: white;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+  text-shadow: 0px 2px 0px white;
+  text-align: center;
+  color: #00257f;
+  font-size: 34px;
+  font-size: 2.125rem; }
+  .circle-icon i, .square-icon i {
+    margin-left: -2px; }
+  .circle-icon.grey-icon, .square-icon.grey-icon {
+    color: #5F697F; }
+  .circle-icon.blue, .square-icon.blue {
+    color: white;
+    background-color: #00257f;
+    background: -webkit-radial-gradient(to bottom, #0043e5 0%, #00257f 60%, #000719 90%);
+    background: -webkit-radial-gradient(top, #0043e5 0%, #00257f 60%, #000719 90%);
+    background: radial-gradient(to bottom, #0043e5 0%, #00257f 60%, #000719 90%);
+    text-shadow: 0px -1px 0px #00164c; }
+  .circle-icon.periwinkle, .square-icon.periwinkle {
+    color: #4d6298;
+    background-color: #ccd3e5;
+    background: -webkit-radial-gradient(to bottom, #ffffff 0%, #ccd3e5 60%, #99a7cb 90%);
+    background: -webkit-radial-gradient(top, #ffffff 0%, #ccd3e5 60%, #99a7cb 90%);
+    background: radial-gradient(to bottom, #ffffff 0%, #ccd3e5 60%, #99a7cb 90%);
+    text-shadow: 0px 1px 0px #eef0f6; }
+  .circle-icon.turquoise, .square-icon.turquoise {
+    color: white;
+    background-color: #14b1cc;
+    background: -webkit-radial-gradient(to bottom, #86e3f3 0%, #14b1cc 60%, #0d7586 90%);
+    background: -webkit-radial-gradient(top, #86e3f3 0%, #14b1cc 60%, #0d7586 90%);
+    background: radial-gradient(to bottom, #86e3f3 0%, #14b1cc 60%, #0d7586 90%);
+    text-shadow: 0px -1px 0px #0f899e; }
+  .circle-icon.orange, .square-icon.orange {
+    color: white;
+    background-color: orange;
+    background: -webkit-radial-gradient(to bottom, #ffdb99 0%, orange 60%, #b37300 90%);
+    background: -webkit-radial-gradient(top, #ffdb99 0%, orange 60%, #b37300 90%);
+    background: radial-gradient(to bottom, #ffdb99 0%, orange 60%, #b37300 90%);
+    text-shadow: 0px -1px 0px #cc8400; }
+  .circle-icon.violet, .square-icon.violet {
+    color: white;
+    background-color: #6f5ce5;
+    background: -webkit-radial-gradient(to bottom, #a99ef0 0%, #6f5ce5 60%, #3a22d3 90%);
+    background: -webkit-radial-gradient(top, #a99ef0 0%, #6f5ce5 60%, #3a22d3 90%);
+    background: radial-gradient(to bottom, #a99ef0 0%, #6f5ce5 60%, #3a22d3 90%);
+    text-shadow: 0px -1px 0px #4830de; }
+  @media screen and (min-width: 481px) {
+    .circle-icon, .square-icon {
+      width: 80px;
+      height: 80px;
+      font-size: 42px;
+      font-size: 2.625rem;
+      line-height: 80px;
+      margin-bottom: 1.5rem; } }
+
+.circle-icon {
   border-bottom-left-radius: 50%;
   border-top-left-radius: 50%;
   border-bottom-right-radius: 50%;
   border-top-right-radius: 50%;
-  background-color: white;
   background: -webkit-radial-gradient(to bottom, white 60%, #d9d9d9 80%);
   background: -webkit-radial-gradient(top, white 60%, #d9d9d9 80%);
-  background: radial-gradient(to bottom, white 60%, #d9d9d9 80%);
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
-  text-shadow: 0px 2px 0px white;
-  color: #5F697F;
-  font-size: 34px;
-  font-size: 2.125rem; }
-  .circle-icon.blue {
-    color: white;
-    background-color: #00257f;
-    background: -webkit-radial-gradient(to bottom, #00257f 60%, #000f33 80%);
-    background: -webkit-radial-gradient(top, #00257f 60%, #000f33 80%);
-    background: radial-gradient(to bottom, #00257f 60%, #000f33 80%);
-    text-shadow: 0px -1px 0px #00164c; }
-  .circle-icon.orange {
-    color: white;
-    background-color: orange;
-    background: -webkit-radial-gradient(to bottom, orange 60%, #cc8400 80%);
-    background: -webkit-radial-gradient(top, orange 60%, #cc8400 80%);
-    background: radial-gradient(to bottom, orange 60%, #cc8400 80%);
-    text-shadow: 0px -1px 0px #cc8400; }
-  @media screen and (min-width: 481px) {
-    .circle-icon {
-      width: 80px;
-      height: 80px;
-      font-size: 48px;
-      font-size: 3rem;
-      line-height: 80px;
-      margin-bottom: 1.5rem; } }
+  background: radial-gradient(to bottom, white 60%, #d9d9d9 80%); }
+
+.square-icon {
+  border-bottom-left-radius: 4px;
+  border-top-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+  border-top-right-radius: 4px;
+  background: -webkit-linear-gradient( top , white 40%, #e6e6e6 80%);
+  background: -webkit-linear-gradient(top, white 40%, #e6e6e6 80%);
+  background: linear-gradient(to bottom, white 40%, #e6e6e6 80%); }
+
+.circle-icon.transparent, .square-icon.transparent {
+  background: none;
+  box-shadow: none; }
 
 .outline .circle-icon {
   background-color: #5F697F;
